Revert "fix collapse persistence"

--- a/src/CollapseEmbeds/styles.module.scss
+++ b/src/CollapseEmbeds/styles.module.scss
@@ -25,8 +25,6 @@
     color: var(--interactive-normal);
     cursor: pointer;
     visibility: hidden;
-    padding: 4px;
-    margin: -4px;
     &:hover {
         color: var(--interactive-hover);
     }
